[gd_scene load_steps=3 format=3 uid="uid://bg78fe3eqx63u"]

[ext_resource type="Script" path="res://scripts/startup.gd" id="1_85pf0"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_totku"]

[node name="Startup" type="Node"]
script = ExtResource("1_85pf0")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/main.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="Level" type="Node" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartupUI" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer/StartupUI"]
custom_minimum_size = Vector2(350, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -78.0
offset_right = 104.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/StartupUI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StartupUI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/StartupUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/StartupUI/MainMenu/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Главное меню
"
horizontal_alignment = 1

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/StartupUI/MainMenu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Server IP"
alignment = 1

[node name="ConnectClient" type="Button" parent="CanvasLayer/StartupUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Зайти
"

[node name="Settings" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_totku")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="CanvasLayer/Settings/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
text = "Fullscreen"

[node name="Button2" type="Button" parent="CanvasLayer/Settings/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
text = "Window"

[connection signal="pressed" from="CanvasLayer/StartupUI/MainMenu/MarginContainer/VBoxContainer/ConnectClient" to="." method="_on_connect_client_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/PanelContainer/MarginContainer/VBoxContainer/Button" to="CanvasLayer/Settings" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/PanelContainer/MarginContainer/VBoxContainer/Button2" to="CanvasLayer/Settings" method="_on_button_2_pressed"]
